--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -1,1 +1,15 @@
 
+name: Ubuntu Executable
+on: push
+jobs:
+  pyinstaller-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Ubuntu Executable
+        uses: sayyid5416/pyinstaller@v1
+        with:
+          python_ver: '3.10'
+          spec: 'MCScanner.py'
+          requirements: 'requirements.txt'
+          upload_exe_with_name: 'MCScanner'
+          options: --onefile, --name "MCScanner",
